Fix CSS: calibre7 is list items, calibre6 is hr
The calibreX class mappings were wrong:
- calibre6 = <hr> horizontal rule (was: bold text)
- calibre7 = <li> list items (was: horizontal rule with height:0)

This caused list items to collapse with height:0, creating the
overlapping text on feed index pages.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,7 +63,8 @@ body, .calibre, .calibre25 {
 }
 
 /* List items - CRITICAL: ensure block display with spacing */
-.calibre5, .calibre8 {
+/* calibre7 is used for <li> in feed index pages */
+.calibre5, .calibre7, .calibre8 {
   display: block;
   margin-bottom: 1.2em;
   padding-bottom: 0.5em;
@@ -170,11 +171,11 @@ body, .calibre, .calibre25 {
   margin: 1.2em 0 0.5em;
 }
 
-/* Horizontal rule */
-.calibre7 {
+/* Horizontal rule - calibre6 is used for <hr> elements */
+hr, .calibre6 {
   display: block;
   height: 0;
-  margin: 1em 0;
+  margin: 0.5em 0;
   border: none;
   border-top: 1px solid #666;
 }
@@ -243,10 +244,6 @@ a {
 }
 
 /* Bold and italic inline */
-.calibre6 {
-  font-weight: bold;
-}
-
 .calibre12 {
   font-style: italic;
 }
